objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Sub-Applications</relationshipLabel>
        <relationshipName>Sub_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <label>Release Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Definition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stability_Icon__c</fullName>
        <formula>IMAGE( 
CASE( Stability__c, 
&quot;Stable&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Uncertain&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Unstable&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Stability Icon&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stability Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stability__c</fullName>
        <label>Stability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Uncertain</fullName>
                </value>
                <value>
                    <fullName>Unstable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>